# pythonprac

./: README.md  run_tests.py
20220913/1/: URLS
20220913/2/: URLS  prog.py
20220920/1/: URLS  prog.py
20220920/2/: URLS  prog.py
20220920/3/: URLS  prog.py
20220927/1/: URLS  prog.py
20220927/2/: URLS  prog.py
20220927/3/: URLS  prog.py
20221004/1/: URLS  prog.py
20221004/2/: URLS  prog.py
20221004/3/: URLS  prog.py
20221004/4/: URLS  prog.py
20221011/: prog.py
20221011/1/: URLS  prog.py
20221011/2/: URLS  prog.py
20221011/3/: URLS  prog.py
20221011/tests/: 2.out  4.out
20221018/1/: URLS  prog.py
20221018/2/: URLS  prog.py
20221018/3/: URLS  prog.py
20221025/1/: URLS  prog.py
20221025/2/: prog.py
20221025/3/: URLS  prog.py
20221101/1/: URLS  prog.py
20221101/2/: URLS  prog.py
20221101/3/: URLS  prog.py
20221108/1/: URLS  prog.py
20221108/2/: URLS  prog.py
20221108/3/: URLS  prog.py
20221115/: prog.py
20221115/1/: URLS  prog.py
20221115/2/: URLS  prog.py
20221115/3/: URLS  prog.py
20221122/1/: URLS  prog.py
20221122/2/: URLS  prog.py
20221122/3/: URLS  prog.py
20221129/1/: URLS  prog.py
20221129/2/: URLS  prog.py
20221206/1/: URLS  prog.py
20221206/2/: URLS  prog.py
20230213/: prog.py
20230213/1/: prog.py
20230220/0/: cow_say.py
20230220/1/: prog.py
20230220/2/: prog.py
20230227/0/: normilize_string.py  split_fio.py
20230227/1/: prog.py
20230417/2/moodserver/: pyproject.toml
20230515/1/moodclient/: pyproject.toml
20230515/1/moodclient/moodclient/: ClientCmd.py
(+175 files in other folders)
